--- a/src/output.css
+++ b/src/output.css
@@ -415,8 +415,8 @@
       max-width: 96rem !important;
     }
   }
-  .-mt-\[100px\] {
-    margin-top: calc(100px * -1);
+  .mt-0 {
+    margin-top: calc(var(--spacing) * 0);
   }
   .mt-1 {
     margin-top: calc(var(--spacing) * 1);
@@ -1708,6 +1708,9 @@
   .px-\[15px\] {
     padding-inline: 15px;
   }
+  .py-0 {
+    padding-block: calc(var(--spacing) * 0);
+  }
   .py-2 {
     padding-block: calc(var(--spacing) * 2);
   }
@@ -1716,6 +1719,9 @@
   }
   .py-6 {
     padding-block: calc(var(--spacing) * 6);
+  }
+  .py-10 {
+    padding-block: calc(var(--spacing) * 10);
   }
   .py-20 {
     padding-block: calc(var(--spacing) * 20);
@@ -1743,9 +1749,6 @@
   }
   .pt-\[100px\] {
     padding-top: 100px;
-  }
-  .pt-\[120px\] {
-    padding-top: 120px;
   }
   .pt-\[150px\] {
     padding-top: 150px;
@@ -1782,6 +1785,9 @@
   }
   .pb-5 {
     padding-bottom: calc(var(--spacing) * 5);
+  }
+  .pb-6 {
+    padding-bottom: calc(var(--spacing) * 6);
   }
   .pb-8 {
     padding-bottom: calc(var(--spacing) * 8);
